--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^4.1.0",
+    "eslint": "^6.8.0",
+    "prettier": "2.1.1"
   }
 }
