--- a/package.json
+++ b/package.json
@@ -27,19 +27,25 @@
     "extends": "react-app"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.2",
+    "@testing-library/user-event": "^12.1.4",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.0",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.5.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.2.0",
+    "typescript": "~4.0.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.1",
+    "@types/styled-components": "^5.1.3",
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^6.8.0",
     "prettier": "2.1.1"
